// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> default should render a radio only without title, helptext/errortext 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio checked(attr) as true if defaultValue(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> defaultValue should render radio input with checked(attr) as false if defaultValue(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          class="Inputweb__Input-lc8gnu-0 demTjA"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 gMmAtl Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> disabled should render a disabled radio input if disabled is true 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 Atelu Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 hgXArD"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 eooHBb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 flyWyf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 eJOkfd Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> errorText should render radio with provided errorText 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-sc-1qrdpx3-0 kjotAU Spaceweb__Space-sc-1abqisc-0 chqsBq"
        color="negative.900"
        data-testid="ds-text"
      >
        This is some sample error text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with defaultValue(uncontrolled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          class="Inputweb__Input-lc8gnu-0 demTjA"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 gMmAtl Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> focus with value(controlled) should render focus styles on radio when radio is not checked 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          class="Inputweb__Input-lc8gnu-0 demTjA"
          data-testid="ds-radio-button"
          type="radio"
          value="2"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 gMmAtl Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.38)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> helpText should render radio with provided helpText 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
      <div
        class="Textweb__Text-sc-1qrdpx3-0 dFPmAI Spaceweb__Space-sc-1abqisc-0 chqsBq"
        color="shade.950"
        data-testid="ds-text"
      >
        This is some sample help text.
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a large radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 gsATFY Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 UsXop Sizeweb__Size-sc-1e5yf1-0 cYmQJs"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 ipSOGU"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 dcXoif Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a medium radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> size should render a small radio input 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 iNzGXA Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 bvljkv Sizeweb__Size-sc-1e5yf1-0 hsUlNY"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 cWhECE"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 ihtYyV Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> title should render radio with provided title 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        >
          Radio Button
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input checked(attr) as true if value(prop) is provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 Atelu Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
        disabled=""
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 hgXArD"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 eooHBb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.10)"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 flyWyf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 eJOkfd Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> value should render radio input with checked(attr) as false if value(prop) is not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 Atelu Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
        disabled=""
      >
        <input
          class="Inputweb__Input-lc8gnu-0 hgXArD"
          data-testid="ds-radio-button"
          disabled=""
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 eooHBb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(22, 47, 86, 0.10)"
          />
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 eJOkfd Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.950"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with default variantColor if variantColor not provided 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 uRMtw"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 iQiMeb Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(43, 131, 234, 1.0 )"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 exHXvf Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`<Radio /> variantColor should render a radio with provided variantColor 1`] = `
<div>
  <fieldset
    class="RadioGroup-sc-4fr4q-0 jyJYod"
  >
    <div
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 iyJkr"
    >
      <label
        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__Label-qplzui-0 bRCsUI Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
      >
        <input
          checked=""
          class="Inputweb__Input-lc8gnu-0 ffShIf"
          data-testid="ds-radio-button"
          type="radio"
          value="1"
        />
        <div
          class="Viewweb__View-sc-1o0hmxm-0 Backdropweb__Backdrop-sc-1n0g7fu-0 SPVQv Sizeweb__Size-sc-1e5yf1-0 esSlSU Flexweb__Flex-sc-1yhcoea-0 jXNfqs"
        >
          <div
            class="Viewweb__View-sc-1o0hmxm-0 Circleweb__Circle-sc-1stp8r7-0 bMOnYv Sizeweb__Size-sc-1e5yf1-0 hMFjeU"
            color="rgba(52, 74, 108, 1.0)"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Dotweb__Dot-sc-1rpusa5-0 jljoOL Sizeweb__Size-sc-1e5yf1-0 blTRNY"
            />
          </div>
        </div>
        <div
          class="Textweb__Text-sc-1qrdpx3-0 fOMNhN Spaceweb__Space-sc-1abqisc-0 clARrY"
          color="shade.980"
          data-testid="ds-text"
        />
      </label>
    </div>
  </fieldset>
</div>
`;
